fix word wrap for URLs

--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,7 @@ footer .theme-by {
 }
 .post-entry {
   width: 100%;
+  word-wrap: break-word; 
 }
 .post-image {
   float: right;
